@@ -10,6 +10,9 @@ What's New in Python 3.2 Alpha 3?
 Core and Builtins
 -----------------
 
+- Issue #9252: PyImport_Import no longer uses a fromlist hack to return the
+  module that was imported, but instead gets the module from sys.modules.
+
 - Issue #9212: The range type_items now provides index() and count()
   methods, to conform to the Sequence ABC.  Patch by Daniel Urban and
   Daniel Stutzbach.
